--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "calculator",
-  "version": "1.0.0",
+  "name": "007-calculator",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "bin": "./main.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
