--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -1,9 +1,9 @@
 {
   "name": "007-calculator",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
-  "main": "main.js",
-  "bin": "./main.js",
+  "main": "./dir/main.js",
+  "bin": "./dir/main.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
