--- a/GuessGame/package.json
+++ b/GuessGame/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "guessgame",
+  "name": "007-randomguessgame",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dir/main.mjs",
+  "bin": "./dir/main.mjs",
+  "files":[
+    "./dir/main.mjs",
+    "./dir/results.mjs",
+    "./dir/userprompt.mjs",
+    "./dir/numbergenarator.mjs"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
